--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
+.DS_Store
+.idea
+obj/
+bin/
+
+
 ## Build generated
 build/
 DerivedData/
